--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-strap": "^2.3.12",
     "angular": "^1.6.2",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "angular-audio": "^1.7.3"
   }
 }
